--- a/src/output.css
+++ b/src/output.css
@@ -560,8 +560,127 @@ video {
   --tw-contain-style:  ;
 }
 
+.flex{
+  display: flex;
+}
+
+.size-11{
+  width: 2.75rem;
+  height: 2.75rem;
+}
+
+.items-center{
+  align-items: center;
+}
+
+.justify-center{
+  justify-content: center;
+}
+
+.justify-between{
+  justify-content: space-between;
+}
+
+.space-x-1 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+
+.border-2{
+  border-width: 2px;
+}
+
+.border-black{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-primary{
+  --tw-border-opacity: 1;
+  border-color: rgb(223 253 126 / var(--tw-border-opacity));
+}
+
+.bg-background{
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 19 0 / var(--tw-bg-opacity));
+}
+
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.fill-primary{
+  fill: #dffd7e;
+}
+
+.p-1{
+  padding: 0.25rem;
+}
+
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.pl-2{
+  padding-left: 0.5rem;
+}
+
 .font-main{
   font-family: new-amsterdam-regular, Nunito;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-forText-dark{
+  --tw-text-opacity: 1;
+  color: rgb(242 254 215 / var(--tw-text-opacity));
+}
+
+.text-forText-light{
+  --tw-text-opacity: 1;
+  color: rgb(209 218 188 / var(--tw-text-opacity));
+}
+
+.text-secondary-dark{
+  --tw-text-opacity: 1;
+  color: rgb(2 157 3 / var(--tw-text-opacity));
+}
+
+.text-secondary-light{
+  --tw-text-opacity: 1;
+  color: rgb(0 204 2 / var(--tw-text-opacity));
+}
+
+.outline-none{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 /* classes */
@@ -571,4 +690,14 @@ video {
   font-weight: 400;
   font-style: normal;
 }
-  
+
+.iconStyle {
+  width: 44px;
+  height: 44px;
+  border: 2px solid;
+  border-radius: 12px;
+  padding: 8px;
+  cursor: pointer;
+  color: #dffd7e;
+  border-color: #dffd7e;
+}
