--- a/src/output.css
+++ b/src/output.css
@@ -560,6 +560,18 @@ video {
   --tw-contain-style:  ;
 }
 
+.fixed{
+  position: fixed;
+}
+
+.mt-\[\]{
+  margin-top: ;
+}
+
+.mt-\[48\.8px\]{
+  margin-top: 48.8px;
+}
+
 .flex{
   display: flex;
 }
@@ -572,6 +584,14 @@ video {
 .size-9{
   width: 2.25rem;
   height: 2.25rem;
+}
+
+.w-screen{
+  width: 100vw;
+}
+
+.cursor-pointer{
+  cursor: pointer;
 }
 
 .items-center{
@@ -604,22 +624,12 @@ video {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-x-3 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .rounded-xl{
   border-radius: 0.75rem;
 }
 
 .border-2{
   border-width: 2px;
-}
-
-.border-b{
-  border-bottom-width: 1px;
 }
 
 .border-primary{
@@ -651,6 +661,10 @@ video {
   fill: #dffd7e;
 }
 
+.fill-accent{
+  fill: #29fc6e;
+}
+
 .p-1{
   padding: 0.25rem;
 }
@@ -665,12 +679,26 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .pl-2{
   padding-left: 0.5rem;
 }
 
+.pt-5{
+  padding-top: 1.25rem;
+}
+
 .font-main{
   font-family: new-amsterdam-regular, Nunito;
+}
+
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-xl{
@@ -683,11 +711,6 @@ video {
   line-height: 1.75rem;
 }
 
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-forText-dark{
   --tw-text-opacity: 1;
   color: rgb(242 254 215 / var(--tw-text-opacity));
@@ -696,6 +719,11 @@ video {
 .text-forText-light{
   --tw-text-opacity: 1;
   color: rgb(209 218 188 / var(--tw-text-opacity));
+}
+
+.text-primary{
+  --tw-text-opacity: 1;
+  color: rgb(223 253 126 / var(--tw-text-opacity));
 }
 
 .text-secondary-dark{
@@ -708,9 +736,13 @@ video {
   color: rgb(0 204 2 / var(--tw-text-opacity));
 }
 
-.text-primary{
+.text-accent{
   --tw-text-opacity: 1;
-  color: rgb(223 253 126 / var(--tw-text-opacity));
+  color: rgb(41 252 110 / var(--tw-text-opacity));
+}
+
+.decoration-double{
+  text-decoration-style: double;
 }
 
 .outline-none{
@@ -727,7 +759,7 @@ video {
 }
 
 .iconStyle {
-  border: 2px solid;
+  /* border: 1px solid; */
   border-radius: 12px;
   padding: 4px;
   cursor: pointer;
@@ -735,4 +767,17 @@ video {
   border-color: #dffd7e;
   width: 32px;
   height: 32px;
+}
+
+.liStyle {
+  /* border: 2px solid; 
+  border-radius: 12px;
+  padding: 4px;
+  cursor: pointer;
+    color: #dffd7e;
+    border-color: #dffd7e; */
+}
+
+.navStyle {
+  border-bottom: 1px solid #029d03;
 }
