--- a/src/output.css
+++ b/src/output.css
@@ -560,20 +560,16 @@ video {
   --tw-contain-style:  ;
 }
 
-.fixed{
-  position: fixed;
-}
-
-.mt-\[\]{
-  margin-top: ;
-}
-
-.mt-\[48\.8px\]{
-  margin-top: 48.8px;
+.inline{
+  display: inline;
 }
 
 .flex{
   display: flex;
+}
+
+.grid{
+  display: grid;
 }
 
 .size-8{
@@ -586,12 +582,56 @@ video {
   height: 2.25rem;
 }
 
+.max-h-\[\]{
+  max-height: ;
+}
+
+.max-h-\[412px\]{
+  max-height: 412px;
+}
+
+.max-h-\[100px\]{
+  max-height: 100px;
+}
+
+.max-h-\[120px\]{
+  max-height: 120px;
+}
+
 .w-screen{
   width: 100vw;
 }
 
+.max-w-\[\]{
+  max-width: ;
+}
+
+.max-w-\[312\]{
+  max-width: 312;
+}
+
+.max-w-\[318\]{
+  max-width: 318;
+}
+
+.max-w-\[318\.2\]{
+  max-width: 318.2;
+}
+
+.max-w-\[318\.2px\]{
+  max-width: 318.2px;
+}
+
 .cursor-pointer{
   cursor: pointer;
+}
+
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.flex-col{
+  flex-direction: column;
 }
 
 .items-center{
@@ -604,6 +644,10 @@ video {
 
 .justify-between{
   justify-content: space-between;
+}
+
+.gap-4{
+  gap: 1rem;
 }
 
 .space-x-1 > :not([hidden]) ~ :not([hidden]){
@@ -624,12 +668,38 @@ video {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-x-3 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .rounded-xl{
   border-radius: 0.75rem;
 }
 
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
+.rounded{
+  border-radius: 0.25rem;
+}
+
+.rounded-2xl{
+  border-radius: 1rem;
+}
+
+.rounded-sm{
+  border-radius: 0.125rem;
+}
+
 .border-2{
   border-width: 2px;
+}
+
+.border{
+  border-width: 1px;
 }
 
 .border-primary{
@@ -640,6 +710,16 @@ video {
 .border-slate-100{
   --tw-border-opacity: 1;
   border-color: rgb(241 245 249 / var(--tw-border-opacity));
+}
+
+.border-secondary-dark{
+  --tw-border-opacity: 1;
+  border-color: rgb(2 157 3 / var(--tw-border-opacity));
+}
+
+.border-black{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .bg-background{
@@ -657,12 +737,51 @@ video {
   background-color: rgb(26 29 17 / var(--tw-bg-opacity));
 }
 
-.fill-primary{
-  fill: #dffd7e;
+.bg-slate-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
+
+.bg-secondary-dark{
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 157 3 / var(--tw-bg-opacity));
+}
+
+.bg-secondary-light{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 204 2 / var(--tw-bg-opacity));
+}
+
+.bg-\[url\(\)\]{
+  background-image: url();
+}
+
+.bg-\[url\(\'\'\)\]{
+  background-image: url('');
+}
+
+.bg-\[url\(\'https\:\/\/images\.unsplash\.com\/photo-1723924671047-788dca3e7f58\?q\=80\&w\=2070\&auto\=format\&fit\=crop\&ixlib\=rb-4\.0\.3\&ixid\=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA\%3D\%3D\'\)\]{
+  background-image: url('https://images.unsplash.com/photo-1723924671047-788dca3e7f58?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+}
+
+.bg-\[url\(\'https\:\/\/images\.unsplash\.com\/photo-1724497508928-14dd7894602c\?q\=80\&w\=2042\&auto\=format\&fit\=crop\&ixlib\=rb-4\.0\.3\&ixid\=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA\%3D\%3D\'\)\]{
+  background-image: url('https://images.unsplash.com/photo-1724497508928-14dd7894602c?q=80&w=2042&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
 }
 
 .fill-accent{
   fill: #29fc6e;
+}
+
+.fill-primary{
+  fill: #dffd7e;
+}
+
+.fill-secondary-dark{
+  fill: #029d03;
+}
+
+.fill-secondary-light{
+  fill: #00cc02;
 }
 
 .p-1{
@@ -679,9 +798,24 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-1{
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .pl-2{
@@ -692,8 +826,17 @@ video {
   padding-top: 1.25rem;
 }
 
+.pt-3{
+  padding-top: 0.75rem;
+}
+
 .font-main{
   font-family: new-amsterdam-regular, Nunito;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-sm{
@@ -706,9 +849,18 @@ video {
   line-height: 1.75rem;
 }
 
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-\[10px\]{
+  font-size: 10px;
+}
+
+.text-accent{
+  --tw-text-opacity: 1;
+  color: rgb(41 252 110 / var(--tw-text-opacity));
 }
 
 .text-forText-dark{
@@ -736,13 +888,8 @@ video {
   color: rgb(0 204 2 / var(--tw-text-opacity));
 }
 
-.text-accent{
-  --tw-text-opacity: 1;
-  color: rgb(41 252 110 / var(--tw-text-opacity));
-}
-
-.decoration-double{
-  text-decoration-style: double;
+.text-\[\]{
+  color: ;
 }
 
 .outline-none{
